# gfat-dapp

./: build.sh  package-lock.json  package.json  truffle-config.js
app/: .env  package-lock.json  package.json  vite.config.ts
app/src/: App.scss  Theme.tsx  _global.scss  app.tsx  main.tsx
app/src/Types/: types.ts
app/src/api/: test.ts
app/src/assets/: GFAT.json
app/src/components/: gfatSlice.ts  store.ts
app/src/components/creation/: CreateDep.tsx  CreateOff.tsx  CreateProj.tsx  CreateTrx.tsx  CreationController.tsx  CreationHooks.ts  DepdropDown.tsx  OffDropDown.tsx
app/src/components/display/: DisplayDep.tsx  DisplayProj.tsx  DisplayTrx.tsx
app/src/pages/Admin/: Admin.scss  Admin.tsx
app/src/pages/Department/: Department.tsx
app/src/pages/Home/: Home.scss  Home.tsx  LandingPage.tsx
app/src/pages/Officer/: Officer.tsx
app/src/services/: DataFetch.ts  login.ts
cache-api/: Cargo.toml
cache-api/cache-rs/src/: main.rs
cache-api/cache-rs/src/gfat/: mod.rs
cache-api/cache-rs/src/models/: models.rs
cache-api/cache-ts/: package-lock.json  tsconfig.json
cache-api/cache-ts/src/api/: test.ts
cache-api/cache-ts/src/assets/: GFAT.json
cache-ts/: .env  docker-compose.yml  package.json
cache-ts/nginx/: nginx.conf
cache-ts/src/: server.ts
cache-ts/src/Types/: types.ts
cache-ts/src/api/: gfat.ts  login.ts
contracts/: GFAT.sol
migrations/: 2_deploy_contracts.js
new-ui/slahKeyHackathon/: index.html  package-lock.json  package.json
new-ui/slahKeyHackathon/src/: App.tsx  main.tsx
test/: test.sol  test.ts
(+13 files in other folders)
