[package]
name = "cache-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers={git="https://github.com/gakonst/ethers-rs"}
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
